--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-DJANGO_SECRET_KEY='a9ywtt*$&(-u$gg#t9eda1suoqojx_!299%aqgv5ix$eyn1)rn'  #'django-insecure-_7*sw=521tna9jd13d*h08v0l3f2%7@y0nlqyc0el5=hue_=(*'
-DJANGO_DEBUG=False
-DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,nginx,100.94.246.4
+DJANGO_SECRET_KEY='django-insecure-l_#2w#9_0w)rph$vrw1&74bt*#z5z2az$*7ttc104p_!08qt4z'
+DJANGO_DEBUG=True
+DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,nginx,10.66.66.8,10.66.66.5,10.66.66.4
 
-INSTANCE_NAME=app2
+INSTANCE_NAME=cm1
 
 DB_NAME=your_db_name
 DB_USER=your_db_user
@@ -17,7 +17,7 @@ EMAIL_USE_TLS=True      #  os.environ.get('EMAIL_USE_TLS')
 EMAIL_HOST_USER='web@soliton-cm.com'      #  os.environ.get('EMAIL_HOST_USER')
 EMAIL_HOST_PASSWORD='!Web2021'   #  os.environ.get('EMAIL_HOST_PASSWORD')
 
-CSRF_TRUSTED_ORIGINS=http://localhost:8700,http://100.94.246.4:8700
+CSRF_TRUSTED_ORIGINS=http://localhost:8700,http://10.66.66.8:8705,http://10.66.66.5:8705,http://10.66.66.4:8705
 
 
 #  os.environ.get('CSRF_TRUSTED_ORIGINS')
