--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -16,8 +16,13 @@ server {
         expires 30d; # Cache static files in browser for 30 days
         add_header Cache-Control "public"; # Improve caching
         gzip on; # Enable gzip compression for static files
-        # Optional: deny access to hidden files like .DS_Store
-        location ~ /\. { access_log off; log_not_found off; deny all; }
+        # Optional: deny access to hidden files like .DS_Store        
+    }
+
+    location ~ /\. {
+        access_log off;
+        log_not_found off;
+        deny all;
     }
 
     location /media/ {
